--- a/GatewayService.csproj
+++ b/GatewayService.csproj
@@ -7,7 +7,7 @@
     <UserSecretsId>680ef949-6f4e-4133-bd68-506173b4a1c1</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <AssemblyVersion>25</AssemblyVersion>
-    <FileVersion>25.12.30.3</FileVersion>
+    <FileVersion>26.1.4.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +16,7 @@
     <PackageReference Include="MethodTimer.Fody" Version="3.2.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
+    <PackageReference Include="Refit.Newtonsoft.Json" Version="9.0.2" />
   </ItemGroup>
 
   <ItemGroup>
